[package]
name = "docker_client"
version = "0.1.0-alpha1"
authors = ["Nikolay Muravev <darkpaladin2000@gmail.com>"]
edition = "2018"
repository = "https://github.com/tuplecats/docker-client"
documentation = "https://docs.rs/docker_client"
description = "docker-client library"
license = "MIT"
homepage = "https://github.com/tuplecats/docker-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
unix_socket = "0.5.0"

