[package]
name = "docker_client"
version = "0.1.0-alpha5"
authors = ["Nikolay Muravev <darkpaladin2000@gmail.com>"]
edition = "2018"
repository = "https://github.com/tuplecats/docker-client"
documentation = "https://docs.rs/docker_client"
description = "docker-client library"
license = "MIT"
homepage = "https://github.com/tuplecats/docker-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
hyperlocal = { version = "0.8.0", optional = true}
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-core = "0.1.18"

[dev-dependencies]
doc-comment = "0.3.3"

[features]
unix-socket = ["hyperlocal"]